# ci-testing

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
dummy/: ops.py
tests/: test_ops.py
